fix(Button): [BSPK-168] Icon alignment within Buttons (#289)
*fix(Button): [BSPK-168] Icon alignment within Buttons

--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -98,6 +98,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content: center;
     }
 
     [data-button-label] {
